--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: 
 
 env:
-  AZURE_WEBAPP_NAME: 'docker-complex'
+  AZURE_WEBAPP_NAME: 'docker-react-complex'
 
 jobs:
   build-and-push:
@@ -27,7 +27,7 @@ jobs:
       - name: Build and Push Client
         uses: docker/build-push-action@v5
         with:
-          context: ./client
+          context: complex/client/
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
@@ -57,6 +57,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-worker:latest
       
   deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Login to Azure
@@ -74,6 +75,6 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: docker-react-complex
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: ''
+          package: .
