--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -33,7 +33,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
       
       - name: check working directory
-        run pwd
+        run: pwd
       - name: Build and Push Nginx
         uses: docker/build-push-action@v5
         with:
