fixing nginx server

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,11 +11,16 @@ server {
 
     location / {
         proxy_pass http://client;
+
+        proxy_set_header X-Forwarded-Host mynginxsample.azurewebsites.net;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /ws {
         proxy_pass http://client;
         proxy_http_version 1.1;
+        proxy_pass_request_headers on;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
