--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,7 +12,7 @@ server {
     location / {
         proxy_pass http://client;
 
-        proxy_set_header X-Forwarded-Host mynginxsample.azurewebsites.net;
+        proxy_set_header X-Forwarded-Host multi-docker-react.azurewebsites.net;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
