--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,13 +3,19 @@ name: Build/Push Images to DockerHub and Deploy Azure Web App
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'client/**'
+      - 'nginx/**'
+      - 'server/**'
+      - 'worker/**'
   workflow_dispatch: 
 
 env:
   AZURE_WEBAPP_NAME: 'multi-docker-react'
 
 jobs:
-  build-and-push:
+  build-and-push-client:
+    if: contains(github.event.push.commits[*].modified, 'client/') || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -24,9 +30,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: check working directory
-        run: pwd
-      
       - name: Build and Push Client
         uses: docker/build-push-action@v5
         with:
@@ -34,7 +37,19 @@ jobs:
           file: ./client/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-client:latest
-      
+
+  build-and-push-nginx:
+    if: contains(github.event.push.commits[*].modified, 'nginx/') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push Nginx
         uses: docker/build-push-action@v5
         with:
@@ -43,6 +58,19 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-nginx:latest
 
+  build-and-push-server:
+    if: contains(github.event.push.commits[*].modified, 'server/') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and Push Server
         uses: docker/build-push-action@v5
         with:
@@ -50,6 +78,18 @@ jobs:
           file: ./server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/multi-server:latest
+  build-and-push-worker:
+    if: contains(github.event.push.commits[*].modified, 'worker/') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Worker
         uses: docker/build-push-action@v5
